Prepare review endpoint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,13 @@
   <div class="jumbotron">
     <h1 class="display-4">Hello, dev!</h1>
     <p class="lead">Read daily news and articles about DevOps!</p>
+    <!-- <p class="lead">Read daily news and articles about DevOps or new movies!</p> -->
     <hr class="my-4" />
     <hr class="my-4" />
+    <!-- <ul>
+      <li><a routerLink="/home" routerLinkActive="active">DevOps News</a></li>
+      <li><a routerLink="/review" routerLinkActive="active">Movie Reviews</a></li>
+    </ul> -->
   </div>
 
   <router-outlet></router-outlet>
